--- a/Travelville/Travel-Agency.html
+++ b/Travelville/Travel-Agency.html
@@ -78,7 +78,7 @@
   <section class="slider">
     <ul class="slides">
       <li>
-        <img src="img/resort1.jpg">
+        <img src="https://image.ibb.co/hbEMux/resort1.jpg" alt="">
         <!-- random image -->
         <div class="caption center-align">
           <h2>Take Your Dream Vacation</h2>
@@ -86,7 +86,7 @@
         </div>
       </li>
       <li>
-        <img src="img/resort2.jpg">
+        <img src="https://image.ibb.co/mn1egc/resort2.jpg" alt="">
         <!-- random image -->
         <div class="caption left-align">
           <h2>We Work With All Budgets</h2>
@@ -94,7 +94,7 @@
         </div>
       </li>
       <li>
-        <img src="img/resort3.jpg">
+        <img src="https://image.ibb.co/mbCVnH/resort3.jpg" alt="">
         <!-- random image -->
         <div class="caption right-align">
           <h2>Group & Individual Getaways</h2>
